--- a/src/components/UpdateStatus/UpdateStatus.css
+++ b/src/components/UpdateStatus/UpdateStatus.css
@@ -1,1 +1,38 @@
- 
+.status-container{
+    width: 700x;
+    height: 180px;
+    padding: 20px 20px 20px 20px;
+    border-radius: 10px;
+    box-shadow: 0.5px 0.5px 0.5px 0.5px #cfcfcf;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+
+}
+.my-avatar{
+    width: 55px;
+    height: 55px;
+}
+.input-container{
+
+    display: flex;
+    flex-direction: row;
+    margin:10px 0 0 50px;
+    
+}
+.input-search{
+    width: 860px;
+    height: 50px;
+    border-radius: 30px ;
+    background-color: #f0f2f5;
+    border: 0.05px none;
+    margin: 0px 0 0 30px;
+}
+.button-container{
+    display: flex;
+    flex-direction: row;
+    margin: 30px 40px 10px 20px;
+}
+.button-item{
+    flex:1
+}
