--- a/src/components/UpdateStatus/UpdateStatus.css
+++ b/src/components/UpdateStatus/UpdateStatus.css
@@ -12,26 +12,31 @@
 .my-avatar{
     width: 55px;
     height: 55px;
+    border-radius: 50%;
+    margin: 8px 0 0 0;
+
 }
 .input-container{
-
     display: flex;
     flex-direction: row;
     margin:10px 0 0 50px;
+    position: relative;
+    
     
 }
 .input-search{
-    width: 860px;
+    width: 650px;
     height: 50px;
     border-radius: 30px ;
     background-color: #f0f2f5;
+    position: absolute;
     border: 0.05px none;
-    margin: 0px 0 0 30px;
+    margin: 10px 0 0 80px;
 }
 .button-container{
     display: flex;
     flex-direction: row;
-    margin: 30px 40px 10px 20px;
+    margin: 10px 40px 10px 20px;
 }
 .button-item{
     flex:1
