--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,85 +1,77 @@
-.header{
-    height: 56px;
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    position: fixed;
-    z-index: 1000;
-    background-color: white;
-
+.header {
+  height: 56px;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  position: fixed;
+  z-index: 1000;
+  background-color: white;
 }
-.sup-header{
-    height: 56px;
-    width: 100%;
+.sup-header {
+  height: 56px;
+  width: 100%;
 }
-.sideleft{
-    width: 320px;
-    margin: 20px;
-    position: relative;
+.sideleft {
+  width: 320px;
+  margin: 20px;
+  position: relative;
 }
-.sideright{
-    width: 350px;
-    position: relative;
-    
+.sideright {
+  width: 350px;
+  position: relative;
 }
-.center{
-    width: calc(100% - 320px - 350px);
-    display: flex;
-    padding: 0px 140px 0px 140px;
-    position: relative;
+.center {
+  width: calc(100% - 320px - 350px);
+  display: flex;
+  padding: 0px 140px 0px 140px;
+  position: relative;
 }
-.bi-facebook{
-    width: 40px;
-    height: 40px;
-    fill: #3474D2
+.bi-facebook {
+  width: 40px;
+  height: 40px;
+  fill: #3474d2;
 }
-.search{
-    width: 238px;
-    height: 37px;
-    margin: 0px 10px 0px 10px;
-    border: white 0.01px;
-    border-radius: 50px ;
-    background-color: #F0F2F5;
-    font-size: 13px;
-   
+.search {
+  width: 238px;
+  height: 37px;
+  margin: 0px 10px 0px 10px;
+  border: white 0.01px;
+  border-radius: 50px;
+  background-color: #f0f2f5;
+  font-size: 13px;
 }
-button{
-    border: none;
-    background-color: white;
-    flex:1;
-    height:56px;
-
+button {
+  border: none;
+  background-color: white;
+  flex: 1;
+  height: 56px;
 }
-.bi{
-    width: 28px;
-    height: 28px;
+.bi {
+  width: 28px;
+  height: 28px;
 }
-.avatar{
-    height: 40px;
-    padding: 0 12px;
-    
-    
-    
+.avatar {
+  height: 40px;
+  padding: 0 12px;
 }
-img{
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
+.my-avatars {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
 }
-span{
-   font-size: .9375rem;
-   margin-left: 10px;
+span {
+  font-size: 0.9375rem;
+  margin-left: 10px;
 }
-.cover{
-    width: 45px;
-    height: 45px;
-    border-radius: 50%;
-    background-color: #d9dadf;
-    margin: 0 6px ;
+.covers {
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+  background-color: #d9dadf;
+  margin: 0 6px;
 }
-.bii{
-    width: 20px;
-    height: 20px;
-    
+.bii {
+  width: 20px;
+  height: 20px;
 }
