--- a/src/Pages/PersonalPage/Components/Presentation.css
+++ b/src/Pages/PersonalPage/Components/Presentation.css
@@ -1,38 +1,68 @@
-.presentation-container{
-    width: 1000px;
-    height: 650px;
-    position: relative;
+.presentation-container {
+  width: 1000px;
+  height: 600px;
+  position: relative;
 }
 
-.cover-container{
-    width: 1000px;
-    height: 412px;
-    position: relative;
+.cover-container {
+  width: 1000px;
+  height: 412px;
+  position: relative;
 }
 .cover-item {
-
-        object-fit: cover;
-        width: 100%;
-        height: 100%;
-        border-radius: 20px;
-    
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  border-radius: 20px;
 }
-.add-cover{
-    position: absolute;
-    right: 20px;
-    bottom: 20px;
-    border-radius: 10px;
-    height: 50px;
-    width: 200px;
+.add-cover {
+  position: absolute;
+  right: 20px;
+  bottom: 20px;
+  border-radius: 10px;
+  height: 50px;
+  width: 200px;
 }
-.avatar-item{
-    width: 230px;
-    height: 230px;
-    border-radius: 50%;
-    border: 7px white solid;
-    position: relative;
-    bottom: 70px;
-    left: 10px;
-    margin: 0 20px 0 30px;
-
+.avatar-item {
+  width: 230px;
+  height: 230px;
+  border-radius: 50%;
+  border: 7px white solid;
+  position: relative;
+  bottom: 70px;
+  left: 10px;
+  margin: 0 20px 0 30px;
+}
+.add-newava {
+  position: relative;
+  bottom: 6px;
+  right: 70px;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
+.avatar-container {
+  display: flex;
+  flex-direction: row;
+  height: 180px;
+}
+.infor-container {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  margin: 20px 0 0 300px;
+}
+.edit-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+}
+.edit-items {
+  margin: 0 20px 20px 110px;
+}
+.edit-item {
+  margin: 0 5px 0 5px;
+  border-radius: 10px;
+  height: 45px;
+  color: #3875eb;
 }
